@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.5-3
-Date: 2022-10-25
+Date: 2022-10-28
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Contact: Matrix-authors@R-project.org
