@@ -17,6 +17,7 @@
 \alias{coerce,matrix,TsparseMatrix-method}
 \alias{coerce,numLike,TsparseMatrix-method}
 \alias{diag,TsparseMatrix-method}
+\alias{diag<-,TsparseMatrix-method}
 \alias{t,TsparseMatrix-method}
 %
 \description{The \code{"TsparseMatrix"} class is the virtual class of
