@@ -5,7 +5,7 @@
 \encoding{UTF-8}
 %% NB: The date (yyyy-mm-dd) is the "Packaged:" date in ../DESCRIPTION
 
-\section{Changes in version 1.5-3 (2022-10-25 r3707)}{
+\section{Changes in version 1.5-3 (2022-10-28 r3711)}{
   \subsection{Bug Fixes}{
     \itemize{
       \item \code{dimScale(x)} with argument \code{d1} missing is no
@@ -22,6 +22,9 @@
   \subsection{New Features}{
     \itemize{
       \item \code{Diagonal()} gets a new optional \code{names} argument.
+
+      \item \code{diag(x) <- value} is now done in C also for
+      \code{[CRT]sparseMatrix}.
     }
   }
 }
